## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GTK_CFLAGS)

packing_CFLAGS =\
	 -Wall\
	 -O1\
	 -g

bin_PROGRAMS = packing

packing_SOURCES = \
	support.h\
	support.c\
	main.c\
	interface.h\
	interface.c\
	callbacks.h\
	callbacks.c

packing_LDFLAGS = 

packing_LDADD =  \
	$(GTK_LIBS)

